# model_forensics_paper

./: .gitignore  CLAUDE.md  README.md  checklist.tex  download_results.py  main.tex  pyproject.toml  references.bib  upload_results.py
figures/main_figure/: main_figure.tex
figures/precommit_hook/: plot.py
reproduce/: REQUIRED_RESULTS.md  build.sh  plot.py
reproduce/data/currency_conversion/Original_CodeOnly/: 2026-03-25_20-00-18.json
reproduce/data/currency_conversion/Original_StaticResponse/: 2026-03-25_19-03-20.json
reproduce/data/currency_conversion/Variant_CodeOnly/: 2026-03-25_20-12-13.json
reproduce/data/currency_conversion/Variant_StaticResponse/: 2026-03-25_20-09-23.json
reproduce/data/eval_tampering/repeated_resampling/: resampled.json
reproduce/data/precommit_elicitations/third_person_actions_questioning/: results_2026-04-02_10-26-57.json
reproduce/data/precommit_hook/aw_can_push/: source.json
reproduce/data/precommit_hook/aw_done_tool/: 2026-04-02_10-16-38-057125.json  2026-04-02_10-30-12-414720.json  2026-04-02_10-44-31-682846.json  2026-04-02_10-56-02-811533.json  2026-04-02_11-12-40-235004.json
reproduce/data/precommit_hook/aw_done_with_request/: source.json
reproduce/data/precommit_hook/aw_endorse_prefill/: source.json
reproduce/data/precommit_hook/aw_have_finished/: source.json
reproduce/data/precommit_hook/aw_memory/: 2026-04-02_08-42-30-710976.json  2026-04-02_08-59-03-631793.json  2026-04-02_09-21-46-768847.json  2026-04-02_09-34-34-840965.json  2026-04-02_09-51-12-972643.json
reproduce/data/precommit_hook/aw_pr_self_review/: source.json
reproduce/data/precommit_hook/aw_step_back_prefill/: source.json
reproduce/data/precommit_hook/ftp_reviewer_first/: source.json
reproduce/data/precommit_hook/ftp_reviewer_third/: source.json
reproduce/data/precommit_hook/ftp_user_first/: source.json
reproduce/data/precommit_hook/ftp_user_third/: source.json
reproduce/scripts/: aggregate_ftp.py  aggregate_precommit_awareness.py  aggregate_precommit_complex_misalignment.py  aggregate_precommit_sweep.py  aggregate_precommit_workaround.py  aggregate_scope_pref.py  analyze_omission.py  compute_sandbagging_accuracy.py  grade_currency.py  grade_precommit_rollouts.py  grade_secret_number.py
src/mats/: __init__.py  config.py  resample_reasoning.py  visualize_rollout.py
src/mats/api/: tinker.py
src/mats/grading/: __init__.py  collect_rollouts.py  rollout_utils.py
src/mats/prefill/: __init__.py  example.py  logprobs.py  plotting.py  tokenization.py
src/mats/priming/: __init__.py  ce_loss.py  deepseek.py  runner.py  visualization.py
src/mats/questioning/: utils.py
src/mats/repeated_resampling/: __init__.py  core.py  models.py  utils.py
src/model_incrimination_paper/: api.py  plotting.py
src/paperplot/: __init__.py  binomial.py  means.py  stats.py  theme.py
(+387 files in other folders)
