[project]
name = "paperplot"
version = "0.1.0"
description = "Publication-quality binomial plotting helpers for the model-incrimination paper."
requires-python = ">=3.11"
dependencies = [
    "cairosvg>=2.9.0",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "scipy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paperplot"]

[dependency-groups]
dev = []
