[project]
name = "mats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "adsingh-64", email = "asingh23@uchicago.edu" }
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "datasets>=4.5.0",
    "fire>=0.7.1",
    "fireworks-ai>=0.19.20",
    "inspect-ai>=0.3.183",
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "modal>=1.3.1",
    "nbformat>=5.10.4",
    "omegaconf>=2.3.0",
    "openai>=2.17.0",
    "pandas>=2.3.3",
    "petri",
    "plotly>=6.6.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "sentences>=0.1.1",
    "slack>=0.0.2",
    "tenacity>=9.1.2",
    "tiktoken>=0.12.0",
    "tinker>=0.18.2",
    "together>=1.5.35",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "umap-learn>=0.5.11",
    "wordcloud>=1.9.6",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[tool.pyright]
typeCheckingMode = "off"
exclude = ["**/results/**", "**/logs/**", "**/.cache/**", "**/.venv/**", "**/eval_tampering_*/**"]

[tool.uv.sources]
petri = { git = "https://github.com/safety-research/petri" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
