[project]
name = "model_incrimination_paper"
version = "0.1.0"
description = "Code and figures for the model incrimination paper."
readme = "README.md"
authors = [
    { name = "adsingh-64", email = "asingh23@uchicago.edu" }
]
requires-python = ">=3.12,<3.14"
dependencies = [
    # LLM client (model_incrimination_paper.api)
    "openai>=2.17.0",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
    "python-dotenv>=1.2.1",
    "pydantic>=2.0",
    # Plotting (model_incrimination_paper.plotting + reproduce/plot.py)
    "matplotlib>=3.10.8",
    "numpy>=1.26",
    "scipy>=1.17.0",
    # CLI (every grader/aggregator script in reproduce/scripts/)
    "fire>=0.7.1",
    # Rollout download (download_results.py)
    "huggingface-hub>=0.27.0",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[tool.pyright]
typeCheckingMode = "off"
exclude = ["**/results/**", "**/logs/**", "**/.cache/**", "**/.venv/**"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
